question center align issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ nav {
   margin: auto;
   /* background: yellow; */
   width: 50%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .quiz-container {
